--- a/home.html
+++ b/home.html
@@ -13,17 +13,30 @@
 
 			<nav class="uk-navbar uk-margin-large-bottom" data-uk-sticky="">
             <!--    <a class="uk-navbar-brand uk-hidden-small"> Kevin de Jonge </a> -->
-                <ul class="uk-navbar-nav " >
+                <ul class="uk-navbar-nav uk-hidden-small" >
                     <li class="uk-active"><a href="#" data-uk-smooth-scroll>HOME</a></li>
                     <li><a href="#overmij" data-uk-smooth-scroll="">ABOUT ME</a></li>
                     <li><a href="#portfolio" data-uk-smooth-scroll>PORTFOLIO</a></li>
                     <li><a href="#contact" data-uk-smooth-scroll>CONTACT</a></li>
                 </ul>
+                <a href="#offcanvas-1" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
                 <ul class="uk-navbar-flip">
                     <a href="index.html"><img src="img/dutch.png" height="20px" width="30px"></a>
                     <a href="home.html"><img src="img/british.png" height="20px" width="30px"></a>
 
                 </ul>
+                <div id="offcanvas-1" class="uk-offcanvas">
+
+                    <div class="uk-offcanvas-bar">
+
+                        <div class="uk-panel"><li class="uk-active"><a class="" href="#" data-uk-smooth-scroll>HOME</a></li>
+                        <li><a href="#overmij" data-uk-smooth-scroll="">ABOUT ME</a></li>
+                        <li><a href="#portfolio" data-uk-smooth-scroll>PORTFOLIO</a></li>
+                        <li><a href="#contact" data-uk-smooth-scroll>CONTACT</a></li></div>
+
+                        </div>
+
+                    </div>
             </nav>
 
 			<div class="uk-grid" data-uk-grid-margin>
@@ -52,7 +65,7 @@
         <p> I am a 24 year old Full-Stack Web Developer, living in Amsterdam. I have completed a Bachelor Communicationsystems (HanzeHogeschool Groningen), a Master Communicationsciences (Vrije Universiteit Amsterdam) and in addition I completed a Full-Stack Web Development course. 
         <br>
         <br>
-        I have completed a course in Marketing and Health Education for my Master Communicationsciences of the Vrije Universiteit Amsterdam. Nevertheless I felt that I didn’t have enough knowledge about the online environment and I decided to participate in a Full-Stack Web Development course. 
+        I have got a Master degree in Marketing and Health Education (Vrije Universiteit Amsterdam. Nevertheless I felt that I did not have enough knowledge about the online environment and I decided to participate in a Full-Stack Web Development course. 
         <br>
         <br>
         I can work with the following programs/languages:
