--- a/index.html
+++ b/index.html
@@ -9,21 +9,35 @@
 		<script type ="text/javascript" src="public/components/sticky.js"></script>
 	</head>
 	<body>
-		<div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom ">
+		<div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
 
 			<nav class="uk-navbar uk-margin-large-bottom" data-uk-sticky="">
 			<!-- 	<a class="uk-navbar-brand uk-hidden-small"> Kevin de Jonge </a> -->
-				<ul class="uk-navbar-nav " >
-					<li class="uk-active"><a href="#" data-uk-smooth-scroll>HOME</a></li>
+				<ul class="uk-navbar-nav uk-hidden-small" >
+					<li class="uk-active"><a class="" href="#" data-uk-smooth-scroll>HOME</a></li>
 					<li><a href="#overmij" data-uk-smooth-scroll="">OVER MIJ</a></li>
 					<li><a href="#portfolio" data-uk-smooth-scroll>PORTFOLIO</a></li>
 					<li><a href="#contact" data-uk-smooth-scroll>CONTACT</a></li>
                 </ul>
+                <a href="#offcanvas-1" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
+
                 <ul class="uk-navbar-flip">
                     <a href="index.html"><img src="img/dutch.png" height="20px" width="30px"></a>
                     <a href="home.html"><img src="img/british.png" height="20px" width="30px"></a>
 
 				</ul>
+                <div id="offcanvas-1" class="uk-offcanvas">
+
+                                <div class="uk-offcanvas-bar">
+
+                                    <div class="uk-panel"><li class="uk-active"><a class="" href="#" data-uk-smooth-scroll>HOME</a></li>
+                    <li><a href="#overmij" data-uk-smooth-scroll="">OVER MIJ</a></li>
+                    <li><a href="#portfolio" data-uk-smooth-scroll>PORTFOLIO</a></li>
+                    <li><a href="#contact" data-uk-smooth-scroll>CONTACT</a></li></div>
+
+                                </div>
+
+                            </div>
 			</nav>
 
 			<div class="uk-grid" data-uk-grid-margin>
